fix dashboard spacing and svg

--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
 :root {
     --main-body-clr: rgb(59, 170, 235);
+    --content-body-clr: rgb(215, 231, 236);
+    --section-article-clr: white;
     --main-font-size: 16px;
     --sidebar-font-clr: rgb(252, 252, 252);
+
+    --left-border-clr: orange;
 }
 
 body {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-size: var(--main-font-size);
     font-family: Arial, Helvetica, sans-serif;
+    border: solid 2px purple;
+    height: 100vh;
 }
 
 h1,
@@ -31,18 +38,19 @@ p {
 }
 
 .side-bar {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     background-color: var(--main-body-clr);
     color: var(--sidebar-font-clr);
     font-weight: 700;
     line-height: 1.8;
-    /* height: 100vh; */
     grid-row: span 4;
     padding-left: 3rem;
 }
 
 .header {
-    padding: 0 3rem;
-    border: solid 1px red;
+    padding: 1.9rem 4rem 2rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -51,14 +59,19 @@ p {
 .header .search-panel {
     display: flex;
     justify-content: space-between;
-    background-color: azure;
 }
 
 .header .user-panel {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: beige;
+}
+
+input[type=search] {
+    border: none;
+    background-color: var(--content-body-clr);
+    border-radius: 10px;
+    padding-left: 10px;
 }
 
 .user-panel .user-greeting {
@@ -72,17 +85,36 @@ p {
 }
 
 .side-bar ul {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     padding: 0;
     list-style: none;
 }
 
+.side-bar ul li {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.side-bar > h1 {
+    display: flex;
+    gap: 6px;
+
+}
+
+.side-bar > h1 > img {
+    margin-left: -13px;
+}
+
 .content {
     position: relative;
-    background-color: burlywood;
+    background-color: var(--content-body-clr);
     display: grid;
     grid-template-columns: 4fr 1fr;
     gap: 25px;
-    padding: 60px 25px 0;
+    padding: 60px 25px 60px;
 }
 
 .projects {
@@ -92,21 +124,17 @@ p {
     gap: 25px;
 }
 
-.projects > .box {
+.projects > .box,
+.content .right-side-box {
     text-align: left;
     padding: 0 15px;
-    background-color: azure;
-}
-
-.content .right-side-box {
-    background-color: azure;
-    padding: 0 15px;
-
+    background-color: var(--section-article-clr);
+    border-left: solid 8px var(--left-border-clr);
+    border-radius: 10px;
 }
 
 .content > .trending {
     position: relative;
-    /* margin-top: 60px; */
     grid-column: 2;
 }
 
